--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,12 @@ test:
   <<: *default
   database: gcpm_test
 
+staging:
+  <<: *default
+  database: gcpm_staging
+  username: <%= ENV['GCPM_DATABASE_USER'] %>
+  password: <%= ENV['GCPM_DATABASE_PASSWORD'] %>
+
 production:
   <<: *default
   database: gcpm_production
