--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,17 @@
-GCPM_DATABASE_USER=
-GCPM_DATABASE_PASSWORD=
+RAKE_ENV=development
+RAILS_ENV=development
+PORT=3000
+
+GCPM_DATABASE_USER=postgres
+GCPM_DATABASE_PASSWORD=postgres
+GCPM_DATABASE_HOST=localhost
+GCPM_DATABASE_URL=
+
 DEVISE_KEY=
 SECRET_KEY_BASE=
+
 CARTODB_KEY=
 CARTODB_ACCOUNT=
+
 SENDGRID_USERNAME=
 SENDGRID_PASSWORD=
