Some fixes for routes devise and code style

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,8 @@ CARTODB_ACCOUNT=
 
 SENDGRID_USERNAME=
 SENDGRID_PASSWORD=
+
+GMAIL_DOMAIN=gmail.com
+GMAIL_USERNAME=xxx@gmail.com
+GMAIL_PASSWORD=xxx
+EMAIL=xxx@zzz.com
