--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  TargetRubyVersion: 2.1
+  TargetRubyVersion: 2.3
   # Cop names are not displayed in offense messages by default. Change behavior
   # by overriding DisplayCopNames, or by giving the -D/--display-cop-names
   # option.
@@ -597,6 +597,10 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: false
 
+# Cheks for Missing frozen string literal comments
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 # Checks if configured preferred methods are used over non-preferred.
 Style/StringMethods:
   Enabled: false
@@ -1033,7 +1037,7 @@ Rails/FindEach:
 
 # Prefer has_many :through to has_and_belongs_to_many.
 Rails/HasAndBelongsToMany:
-  Enabled: true
+  Enabled: false
 
 # Checks for calls to puts, print, etc.
 Rails/Output:
