Allow to create update and delete user's projects and setup test env

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   <<: *default
   database: gcpm_development
 
-test:
+test: &test
   <<: *default
   database: gcpm_test
 
@@ -37,3 +37,6 @@ staging:
 production:
   <<: *default
   url: <%= ENV['GCPM_DATABASE_URL'] %>
+
+cucumber:
+  <<: *test
