--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,21 @@ version: '2'
 services:
   db:
     image: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - "$HOME/tmp/gcpm/postgres:/var/lib/postgresql"
   web:
     build: .
     ports:
       - "3000:3000"
     volumes:
-      - './:/usr/src/gcpm'
+      - "./:/usr/src/gcpm"
     env_file: .env
+    environment:
+      - GCPM_DATABASE_HOST=db
+    container_name: gcpm
     depends_on:
+      - db
+    links:
       - db
