--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ services:
   db:
     image: postgres
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
-      - .:/var/lib/postgresql
+      - "$HOME/tmp/gcpm/postgres:/var/lib/postgresql"
   web:
     build: .
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
-      - .:/app
+      - "./:/usr/src/gcpm"
     env_file: .env
     environment:
       - GCPM_DATABASE_HOST=db
