Revert "adds a sort by new component"

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,7 @@
   	"Backbone": true,
   	"_": true,
   	"App": true,
-    "HandlebarsTemplates": true,
-    "gon": true
+    "HandlebarsTemplates": true
   },
   "extends": "eslint:recommended"
 }
