fixed som bugs 2

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     "_": true,
     "App": true,
     "HandlebarsTemplates": true,
-    "gon": true
+    "gon": true,
+    "Promise": true
   },
   "extends": "eslint:recommended"
 }
