--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -730,6 +730,8 @@ Metrics/PerceivedComplexity:
   Enabled: true
   Max: 50
 
+Metrics/BlockLength:
+  Enabled: false
 
 #################### Lint ################################
 
