optimizing external libs load

--- a/.env.sample
+++ b/.env.sample
@@ -22,3 +22,5 @@ GMAIL_PASSWORD=xxx
 EMAIL=xxx@zzz.com
 
 BASEMAP_URL=http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png
+
+GOOGlE_ANALYTICS=
